added menu bar and pics

--- a/index.html
+++ b/index.html
@@ -5,8 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+    <header>
+        <div class="topbar">
+            <nav class="menu-column">
+                <ul class="main-menu-top">
+                    <li>
+                        <a href="#!" class="menu-color">Donna</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="menu-color">Uomo</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="menu-color">Bambini</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="logo-column">
+                <a href="#!"><img src="img/boolean-logo.png" class="boolean-logo" alt="boolean"></a>
+            </div>
+            <nav class="button-column">
+                <ul class="button-menu">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </nav>
+
+        </div>
+
+    </header>
     
+
+    <main class="main-menu-middle">
+        <img src="img/1.webp" class="immagine-top" alt="">
+        <img src="img/2.webp" class="immagine-top" alt="">
+        <img src="img/3.webp" class="immagine-top" alt="">
+        <img src="img/4.webp" class="immagine-bottom" alt="">
+        <img src="img/5.webp" class="immagine-bottom" alt="">
+        <img src="img/6.webp" class="immagine-bottom" alt="">
+    </main>
+
+
+    <footer>
+
+    </footer>
+
+
 </body>
 </html>
