--- a/index.html
+++ b/index.html
@@ -42,16 +42,43 @@
     
 
     <main class="main-menu-middle">
-        <img src="img/1.webp" class="immagine-top" alt="">
-        <img src="img/2.webp" class="immagine-top" alt="">
-        <img src="img/3.webp" class="immagine-top" alt="">
-        <img src="img/4.webp" class="immagine-bottom" alt="">
-        <img src="img/5.webp" class="immagine-bottom" alt="">
-        <img src="img/6.webp" class="immagine-bottom" alt="">
+        <!-- <div class="container-1">
+            <img src="img/1.webp" class="img-top img-1" alt="">
+            <div class="overlay-1">
+                <div>
+                    <img src="img/1b.webp" class="img-1-overlay" alt="">
+                </div>
+                
+
+            </div>
+        </div> -->
+        <img src="img/1.webp" class="img-top img-1" alt="">
+        <img src="img/2.webp" class="img-top img-2" alt="">
+        <img src="img/3.webp" class="img-top img-3" alt="">
+        <img src="img/4.webp" class="img-bottom img-4" alt="">
+        <img src="img/5.webp" class="img-bottom img-5" alt="">
+        <img src="img/6.webp" class="img-bottom img-6" alt="">
     </main>
 
 
     <footer>
+        <div class="bottom-bar">
+            <nav class="footer-nav-column">
+                <h4 class="booleando">Boolando s.r.l</h4>
+                <ul class="main-menu-bottom">
+                    <li>
+                        <a href="#!" class="bottom-menu-color">Informazioni legali</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="bottom-menu-color">Informativa sulla privacy</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="bottom-menu-color">Diritto di recesso</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
 
     </footer>
 
