--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
 <body>
 
     <header>
         <div class="topbar">
-            <nav class="menu-column">
+            <nav>
                 <ul class="main-menu-top">
                     <li>
                         <a href="#!" class="menu-color">Donna</a>
@@ -26,13 +27,19 @@
                 </ul>
             </nav>
             <div class="logo-column">
-                <a href="#!"><img src="img/boolean-logo.png" class="boolean-logo" alt="boolean"></a>
+                <!-- <a href="#!">--><img src="img/boolean-logo.png" class="boolean-logo" alt="boolean"><!--</a> -->
             </div>
-            <nav class="button-column">
+            <nav>
                 <ul class="button-menu">
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li class="menu-color">
+                        <i class="fa-regular fa-user"></i>
+                    </li>
+                    <li class="menu-color">
+                        <i class="fa-regular fa-heart"></i>
+                    </li>
+                    <li class="menu-color">
+                        <i class="fa-solid fa-lock"></i>
+                    </li>
                 </ul>
             </nav>
 
@@ -52,18 +59,28 @@
 
             </div>
         </div> -->
-        <img src="img/1.webp" class="img-top img-1" alt="">
-        <img src="img/2.webp" class="img-top img-2" alt="">
-        <img src="img/3.webp" class="img-top img-3" alt="">
-        <img src="img/4.webp" class="img-bottom img-4" alt="">
-        <img src="img/5.webp" class="img-bottom img-5" alt="">
-        <img src="img/6.webp" class="img-bottom img-6" alt="">
+        <div class="rel">
+            <div class="abs">
+            </div>
+            <img src="img/1.webp" class="img-top img-1" alt="">
+
+            <!-- <span>Levi's</span>
+            <span>RELAXED FIT TEE UNISEX</span>
+            <span>14,99</span> -->
+            <img src="img/2.webp" class="img-top img-2" alt="">
+            <img src="img/3.webp" class="img-top img-3" alt="">
+            <img src="img/4.webp" class="img-bottom img-4" alt="">
+            <img src="img/5.webp" class="img-bottom img-5" alt="">
+            <img src="img/6.webp" class="img-bottom img-6" alt="">
+
+        </div>
+        
     </main>
 
 
     <footer>
         <div class="bottom-bar">
-            <nav class="footer-nav-column">
+            <nav>
                 <h4 class="booleando">Boolando s.r.l</h4>
                 <ul class="main-menu-bottom">
                     <li>
@@ -74,6 +91,26 @@
                     </li>
                     <li>
                         <a href="#!" class="bottom-menu-color">Diritto di recesso</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav>
+                <h4 class="find-us">Trovaci anche su</h4>
+                <ul class="button-menu">
+                    <li class="menu-color">
+                        <i class="fa-brands fa-square-twitter"></i>
+                    </li>
+                    <li class="menu-color">
+                        <i class="fa-brands fa-square-facebook"></i>
+                    </li>
+                    <li class="menu-color">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </li>
+                    <li class="menu-color">
+                        <i class="fa-brands fa-square-pinterest"></i>
+                    </li>
+                    <li class="menu-color">
+                        <i class="fa-brands fa-square-youtube"></i>
                     </li>
                 </ul>
             </nav>
