fixed header and footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     
 
-    <main class="main-menu-middle">
+    <main class="main-menu-middle container">
         <!-- <div class="container-1">
             <img src="img/1.webp" class="img-top img-1" alt="">
             <div class="overlay-1">
@@ -78,7 +78,7 @@
     </main>
 
 
-    <footer>
+    <footer class="container">
         <div class="bottom-bar">
             <nav>
                 <h4 class="booleando">Boolando s.r.l</h4>
